--- a/src/app/@Core/components/navbar/navbar.component.html
+++ b/src/app/@Core/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-primary d-block h-20 d-inline px-3 py-3 position-sticky text-white">
+<nav class="bg-primary block h-20 d-inline px-3 py-3 position-sticky text-white">
   <div class="">
     <a [routerLink]="['/dashboard']"> DASHBOARD</a>
   </div>
