--- a/src/app/shared/components/no-data-found/no-data-found.component.html
+++ b/src/app/shared/components/no-data-found/no-data-found.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-center flex-column">
+<div class="flex items-center justify-center flex-col">
   <img
     class="img-fluid"
     ngSrc="/assets/images/nodatafound.png"
