--- a/src/app/shared/components/search/search.component.html
+++ b/src/app/shared/components/search/search.component.html
@@ -1,7 +1,7 @@
 <div
   (focus)="inputUi.focus()"
   [ngClass]="[isDisabled ? 'disabled' : '', appliedClasses]"
-  class="flex gap-2 justify-items-center bg-white rounded position-relative bg-danger search"
+  class="flex gap-2 justify-items-center bg-white rounded position-relative search"
   tabindex="-1"
 >
   <input
