--- a/src/app/@Core/components/navbar/navbar.component.html
+++ b/src/app/@Core/components/navbar/navbar.component.html
@@ -1,5 +1,3 @@
-<nav class="bg-primary block h-20 d-inline px-3 py-3 position-sticky text-white">
-  <div class="">
-    <a [routerLink]="['/dashboard']"> DASHBOARD</a>
-  </div>
+<nav class="bg-primary h-20 d-inline px-8 py-3 position-sticky text-white flex items-center">
+  <a [routerLink]="['/employee']"> DASHBOARD</a>
 </nav>
