--- a/src/app/shared/components/back-button/back-button.component.html
+++ b/src/app/shared/components/back-button/back-button.component.html
@@ -1,3 +1,3 @@
-<button class="btn text-white bg-primary flex items-center" (click)="back()" [ngClass]="buttonClasses">
+<button class="rounded text-white bg-primary px-20 py-4 flex items-center" (click)="back()" [ngClass]="buttonClasses">
   <span>{{ buttonTitle }}</span>
 </button>
