--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -9,18 +9,20 @@
     <tbody>
       <tr *ngFor="let item of tableData">
         <td *ngFor="let header of headers; let i = index" [ngClass]="header.classesStyle">
-          <span *ngIf="header.value"> {{ getRowValueFromHeader(header, item) }}</span>
+          <span *ngIf="header.value" class="text-primary"> {{ getRowValueFromHeader(header, item) }}</span>
         </td>
         <td *ngIf="actions">
-          <div
-            *ngFor="let action of actions"
-            class="iconStyle flex justify-center items-center gap-2 cursor-pointer"
-            [ngClass]="action.iconClasses"
-            (click)="action.callback(item)"
-          >
-            <span role="button" tabindex="0" class="text-nowrap mb-1 d-inline-block" [title]="action.label">
-              <i class="pi d-inline-block" [ngClass]="action.icon" style="color: #023e8a"></i>
-            </span>
+          <div class="flex justify-center items-center flex-row gap-3 cursor-pointer">
+            <div
+              *ngFor="let action of actions"
+              class="iconStyle"
+              [ngClass]="action.iconClasses"
+              (click)="action.callback(item)"
+            >
+              <span role="button" tabindex="0" class="text-nowrap mb-1 d-inline-block" [title]="action.label">
+                <i class="pi d-inline-block" [ngClass]="action.icon" style="color: #023e8a"></i>
+              </span>
+            </div>
           </div>
         </td>
       </tr>
@@ -35,5 +37,6 @@
     [pageSize]="pageSize"
     [totalCount]="totalCount"
     [totalPages]="Math.ceil(totalCount / pageSize)"
+    [currentPage]="pageNumber"
   ></dash-pagination>
 </div>
