adding user cruds

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <router-outlet></router-outlet>
-<dash-global-loader *ngIf="loaderService.loaderSignal()"></dash-global-loader>
+<dash-global-loader *ngIf="isLoading"></dash-global-loader>
