--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -1,10 +1,35 @@
-<div class="card" [ngClass]="[appliedClasses]">
-  <img src="{{ imageUrl }}" class="card-img-top" alt="{{ imageAlt }}" *ngIf="imageUrl" />
-  <div class="card-body">
-    <h5 class="card-title" *ngIf="title">{{ title }}</h5>
-    <p class="card-text" *ngIf="description">{{ description }}</p>
-    <a href="#" class="btn btn-primary" *ngIf="buttonText">{{ buttonText }}</a>
+<div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow" [ngClass]="[appliedClasses]">
+  <a class="w-100" [routerLink]="['/user-details/', data?.id]">
+    <img class="rounded-t-lg w-full block object-cover" src="{{ imageUrl }}" alt="{{ imageAlt }}" *ngIf="imageUrl" />
+  </a>
+  <div class="p-5">
+    <a>
+      <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white" *ngIf="title">{{ title }}</h5>
+    </a>
+    <p class="mb-3 font-normal text-gray-700 dark:text-gray-400" *ngIf="description">{{ description }}</p>
+    <a
+      href="#"
+      class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+      *ngIf="buttonText"
+      >{{ buttonText }}
+      <svg
+        class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
+        aria-hidden="true"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 14 10"
+      >
+        <path
+          stroke="currentColor"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M1 5h12m0 0L9 1m4 4L9 9"
+        />
+      </svg>
+    </a>
   </div>
+
   <a class="card-link" *ngIf="cardLinkText">{{ cardLinkText }}</a>
   <div class="">
     @if (actions) {
@@ -13,12 +38,12 @@
           <span
             role="button"
             tabindex="0"
-            class="text-nowrap mb-1 d-inline-block"
+            class="text-nowrap mb-1 inline-block"
             [title]="action.label"
             [ngClass]="action.iconClasses"
             (click)="action.callback(data)"
           >
-            <i class="pi d-inline-block" [ngClass]="action.icon" style="color: #023e8a"></i>
+            <i class="pi inline-block" [ngClass]="action.icon" style="color: #023e8a"></i>
           </span>
         }
       </div>
