--- a/src/assets/sass/_main.scss
+++ b/src/assets/sass/_main.scss
@@ -15,3 +15,4 @@
 ================================ */
 @import './dash-project/utils/scroll';
 @import './dash-project/utils/tailwind-custom-classes';
+@import './dash-project/utils/gloabal';
